--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ nav img {
 .nav-links {
     flex: 1;
     text-align: right;
-
 }
 
 /* Horizontal styling of the navigation bar. */
@@ -37,4 +36,11 @@ nav img {
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+}
+
+.nav-links ul li a {
+    color: #fff;
+    text-decoration: none;
+    font: 'Ariel', Courier, monospace;
+    font-size: 18px;
 }
