--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .header {
@@ -28,6 +29,7 @@ nav img {
 .nav-links {
     flex: 1;
     text-align: right;
+
 }
 
 /* Horizontal styling of the navigation bar. */
@@ -41,6 +43,40 @@ nav img {
 .nav-links ul li a {
     color: #fff;
     text-decoration: none;
-    font: 'Ariel', Courier, monospace;
     font-size: 18px;
+}
+
+.nav-links ul li::after {
+    content: '';
+    /*hide the bar until it's clicked */
+    width: 0%;
+    height: 2px;
+    background: #31bff7;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+.text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box h1 {
+    font-size: 68px;
+}
+
+.text-box p {
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: #fff;
 }
