--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav img {
     /*hide the bar until it's clicked */
     width: 0%;
     height: 2px;
-    background: #31bff7;
+    background: #5091c6;
     display: block;
     margin: auto;
     transition: 0.3s;
@@ -78,5 +78,48 @@ nav img {
 .text-box p {
     margin: 10px 0 40px;
     font-size: 14px;
+    line-height: 25px;
+    /* https://stackoverflow.com/questions/48370138/how-i-can-set-margin-between-lines-in-one-paragraph */
+    padding: 3px;
     color: #fff;
+}
+
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.hero-btn:hover {
+    border: 1px solid #5091c6;
+    background: #5091c6;
+    transition: 0.4s;
+}
+
+/* accomodation for small device */
+@media(max-width: 700px) {
+    .text-box h1 {
+        font-size: 20px;
+    }
+
+    .nav-links ul li {
+        display: block;
+    }
+
+    .nav-links {
+        position: absolute;
+        background: #5091c6;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
 }
