--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav img {
 
 .text-box p {
     margin: 10px 0 40px;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 25px;
     /* https://stackoverflow.com/questions/48370138/how-i-can-set-margin-between-lines-in-one-paragraph */
     padding: 3px;
@@ -102,6 +102,10 @@ nav img {
     transition: 0.4s;
 }
 
+nav .fa {
+    display: none;
+}
+
 /* accomodation for small device */
 @media(max-width: 700px) {
     .text-box h1 {
@@ -118,8 +122,66 @@ nav img {
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 0.4s;
     }
+
+
+    /* The cross icon for the screen menu */
+    nav .fa {
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+
+    .nav-links ul {
+        padding: 20px;
+    }
+}
+
+/* What we do */
+.container { 
+    margin: 120px auto;
+    width: 87.5%;
+    padding: 8px;
+}
+
+img {
+    width: 550px;
+}
+
+.imageContainerLeft {
+    float: left;
+    padding: 0 30px 0 0;
+}
+
+.imageContainerRight {
+    float: right;
+    padding: 0 0 0 30px;
+}
+
+/* Reveal with scroll 
+https://codepen.io/alvarotrigo/pen/PoKamZy */
+
+
+.text {
+    text-align: center;
+}
+
+.q-a-text-box h2 {
+    color: #fff;
+    font-size: 36px;
+}
+
+.q-a-text-box p {
+    color: #fff;
+    margin: 10px 0 40px;
+    font-size: 14px;
+    line-height: 25px;
+    padding: 3px;
+   
 }
